update index.html file

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             // or enable responsive functionality
             GitHubCalendar(".calendar", "Ravipatel02", { responsive: true });
             var runredirect=function(){
-                var redirect1=window.open("https://drive.google.com/file/d/1uIiM9y6yTkeqH_6p2avgLDZXIAOhqaoj/view?usp=sharing");
+                var redirect1=window.open("https://drive.google.com/file/d/1wWxYV8UhtEkAYiU8bhwCfkLqUeGN-XII/view?usp=drive_link");
                 redirect1.location;
             }
             
